chore: resolve diverging sub id name
