# src/test-api/handlers.js
@@ -74,13 +74,13 @@ const readParties = async (ctx) => {
 
 const readParty = async (ctx) => {
     try {
-        const { idValue, idType, subIdValue } = ctx.state.path.params;
+        const { idValue, idType, idSubValue } = ctx.state.path.params;
         if (!idValue || !idType) {
             ctx.response.body = ApiErrorCodes.MISSING_ID_VALUE;
             ctx.response.status = 400;
             return;
         }
-        const res = await ctx.state.model.party.get(idType, idValue, subIdValue);
+        const res = await ctx.state.model.party.get(idType, idValue, idSubValue);
         if (!res) {
             ctx.response.body = '';
             ctx.response.status = 404;
@@ -95,7 +95,7 @@ const readParty = async (ctx) => {
 };
 
 const updateParty = async (ctx) => {
-    const { idValue, idType, subIdValue } = ctx.state.path.params;
+    const { idValue, idType, idSubValue } = ctx.state.path.params;
     const model = ctx.request.body;
     if (!idValue || !idType) {
         ctx.response.body = ApiErrorCodes.MISSING_ID_VALUE;
@@ -104,7 +104,7 @@ const updateParty = async (ctx) => {
     }
 
     try {
-        await ctx.state.model.party.update(model, idType, idValue, subIdValue);
+        await ctx.state.model.party.update(model, idType, idValue, idSubValue);
         ctx.response.status = 204;
         return;
     } catch (err) {
@@ -114,7 +114,7 @@ const updateParty = async (ctx) => {
 };
 
 const deleteParty = async (ctx) => {
-    const { idValue, idType, subIdValue } = ctx.state.path.params;
+    const { idValue, idType, idSubValue } = ctx.state.path.params;
     if (!idValue || !idType) {
         ctx.response.body = ApiErrorCodes.MISSING_ID_VALUE;
         ctx.response.status = 500;
@@ -122,7 +122,7 @@ const deleteParty = async (ctx) => {
     }
 
     try {
-        await ctx.state.model.party.delete(idType, idValue, subIdValue);
+        await ctx.state.model.party.delete(idType, idValue, idSubValue);
         ctx.response.status = 204;
         return;
     } catch (err) {
@@ -236,7 +236,7 @@ const map = {
         delete: deleteParty,
         get: readParty,
     },
-    '/repository/parties/{idType}/{idValue}/{subIdValue}': {
+    '/repository/parties/{idType}/{idValue}/{idSubValue}': {
         put: updateParty,
         delete: deleteParty,
         get: readParty,
